--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         :root {
             --bg-deep: #1a1c23;      
             --bg-card: #252833;      
-            --accent-yellow: #0000FF; 
+            --accent-yellow: #ADD8E6; 
             --text-white: #ffffff;
             --text-gray: #9ca3af;
         }
