--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
 
     <section class="stats-bar">
         <div class="stat-item">
-            <h2>34</h2>
+            <h2>more then 100</h2>
             <p>High-Ticket Deals Closed</p>
         </div>
         <div class="stat-item">
