--- a/index.html
+++ b/index.html
@@ -225,8 +225,8 @@
 
         <div class="deal-grid">
             <div class="info-card">
-                <h3>The 34-Deal Track Record</h3>
-                <p>I have successfully negotiated and closed <strong>34 high-ticket partnerships</strong> between global tech manufacturers and top-tier influencers. Every deal is engineered for maximum market impact and sustained growth.</p>
+                <h3>The more then 100 Deal Track Record</h3>
+                <p>I have successfully negotiated and closed <strong>more then 100 high-ticket partnerships</strong> between global tech manufacturers and top-tier influencers. Every deal is engineered for maximum market impact and sustained growth.</p>
             </div>
             <div class="info-card">
                 <h3>Tier-1 Partnerships</h3>
