--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
 
         <div class="highlight-box">
             <h2>Our Brand Philosophy</h2>
-            <p>We don't just "set meetings." We build the future of tech influence. By focusing on technical authenticity and high-reach engagement, we have created a proven blueprint for success in the hardware industry.</p>
+            <p> We build the future of tech influence. By focusing on technical authenticity and high-reach engagement, we have created a proven blueprint for success in the hardware industry.</p>
         </div>
     </section>
 
