--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
         </div>
         <div class="stat-item">
             <h2>Elite</h2>
-            <p>Hardware Standards</p>
+            <p> with evry Standards</p>
         </div>
     </section>
 
@@ -230,7 +230,7 @@
             </div>
             <div class="info-card">
                 <h3>Tier-1 Partnerships</h3>
-                <p>My agency exclusively represents the "Gold Standard." We facilitate synergy between industry-leading hardware providers and elite creators.</p>
+                <p>My agency exclusively represents the "Gold Standard." We facilitate synergy between industry-leading  providers and elite creators.</p>
             </div>
         </div>
 
